# project_of_mr_ha

./: CMakeLists.txt  Partition_Example.csv  README.md
html/: index.html
main/: CMakeLists.txt  environment_sensor.c  environment_sensor.h  http_server_app.c  http_server_app.h  ledc_pwm.c  ledc_pwm.h  main.c  mqtt.c  mqtt.h  nvs_flash_storage.c  nvs_flash_storage.h  wifi_sta_smartconfig.c  wifi_sta_smartconfig.h
