idf_component_register(SRCS "main.c"
                            "wifi_sta_smartconfig.c" 
                            "http_server_app.c" 
                            "environment_sensor.c"
                            "nvs_flash_storage.c"
                            "ledc_pwm.c"
                    INCLUDE_DIRS ".")